[gd_scene load_steps=22 format=2]

[ext_resource path="res://Villager.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainScript.gd" type="Script" id=2]
[ext_resource path="res://DrawSelectNode2DScript.gd" type="Script" id=3]
[ext_resource path="res://Fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background/background-new.png" type="Texture" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/font/monogram.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/click/click2.png" type="Texture" id=8]
[ext_resource path="res://assets/click/click1.png" type="Texture" id=9]
[ext_resource path="res://assets/click/click4.png" type="Texture" id=10]
[ext_resource path="res://assets/click/click3.png" type="Texture" id=11]
[ext_resource path="res://assets/click/click5.png" type="Texture" id=12]
[ext_resource path="res://assets/sounds/fire.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/chopping.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/water.wav" type="AudioStream" id=15]
[ext_resource path="res://PauseSceneScript.gd" type="Script" id=16]
[ext_resource path="res://assets/sounds/select.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": false,
"name": "click",
"speed": 11.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 563, 322, 815, 272, 858, 282, 552, 341, 962, 105, 1028, -4, 1029, 603, 927, 153, 915, 202, 893, 61, 883, 90, 862, 52, 675, 81, 656, 118, 566, 99, 548, 65, 930, 43, -4, -8, 329, 17, 881, 230, -7, 603, 520, 350, 731, 63, 721, 97, 693, 75, 563, 301, 803, 239, 830, 180, 848, 163, 854, 169, 834, 195, 556, 125, 661, 158, 536, 262, 799, 181, 811, 212, 749, 187, 24, 190, 36, 193, 36, 218, 337, 93, 325, 87, 328, 67, 348, 62, 351, 103, 355, 53, 223, 48, 175, 53, 164, 32, 279, 24, 276, 36, 358, 39, 351, 24, 757, 45, 825, 59, 809, 83, 795, 81, 782, 55, 771, 171, 698, 177, 522, 121, 512, 263, 492, 339, 482, 316, 314, 159, 321, 147, 343, 144, 289, 210, 486, 294, 134, 31, 122, 52, 78, 61, 58, 116, 60, 136, 42, 156, 21, 158, 60, 82, 522, 97, 535, 65, 249, 253, 356, 126, 304, 21, 15, 173, 52, 252, 107, 268, 161, 268 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6 ), PoolIntArray( 7, 4, 6, 8 ), PoolIntArray( 9, 10, 11 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 5, 4, 16 ), PoolIntArray( 17, 5, 16, 18 ), PoolIntArray( 19, 8, 6, 2 ), PoolIntArray( 3, 2, 6, 20, 21 ), PoolIntArray( 22, 23, 24 ), PoolIntArray( 1, 0, 25, 26 ), PoolIntArray( 27, 28, 29, 30 ), PoolIntArray( 31, 14, 13, 32, 33 ), PoolIntArray( 34, 27, 30, 35, 33, 36 ), PoolIntArray( 37, 38, 39, 20 ), PoolIntArray( 40, 41, 42, 43 ), PoolIntArray( 44, 40, 43, 45 ), PoolIntArray( 26, 25, 33, 35 ), PoolIntArray( 46, 47, 48, 49, 50 ), PoolIntArray( 51, 52, 16, 53 ), PoolIntArray( 54, 55, 56, 57 ), PoolIntArray( 36, 58, 34 ), PoolIntArray( 59, 36, 33 ), PoolIntArray( 32, 59, 33 ), PoolIntArray( 60, 31, 33, 61 ), PoolIntArray( 62, 21, 20 ), PoolIntArray( 63, 62, 20 ), PoolIntArray( 64, 65, 66, 67 ), PoolIntArray( 68, 63, 20 ), PoolIntArray( 69, 70, 71, 17 ), PoolIntArray( 72, 73, 74, 75 ), PoolIntArray( 16, 9, 11 ), PoolIntArray( 76, 72, 75, 17 ), PoolIntArray( 60, 61, 68, 20, 77 ), PoolIntArray( 24, 12, 15 ), PoolIntArray( 78, 77, 20, 79, 67 ), PoolIntArray( 53, 22, 24, 15, 51 ), PoolIntArray( 78, 80, 44, 45, 51 ), PoolIntArray( 54, 57, 53, 11 ), PoolIntArray( 16, 52, 18 ), PoolIntArray( 17, 18, 81, 49, 48, 69 ), PoolIntArray( 17, 71, 76 ), PoolIntArray( 17, 75, 82 ), PoolIntArray( 20, 17, 82 ), PoolIntArray( 20, 82, 37 ), PoolIntArray( 20, 39, 83 ), PoolIntArray( 20, 83, 84 ), PoolIntArray( 20, 84, 85 ), PoolIntArray( 20, 85, 79 ), PoolIntArray( 78, 67, 66 ), PoolIntArray( 78, 66, 80 ), PoolIntArray( 16, 11, 53 ), PoolIntArray( 78, 51, 15 ) ]
outlines = [ PoolVector2Array( 1028, -4, 1029, 603, -7, 603, -4, -8 ), PoolVector2Array( 289, 210, 314, 159, 321, 147, 343, 144, 356, 126, 351, 103, 337, 93, 325, 87, 328, 67, 348, 62, 355, 53, 358, 39, 351, 24, 329, 17, 304, 21, 279, 24, 276, 36, 223, 48, 175, 53, 164, 32, 134, 31, 122, 52, 78, 61, 60, 82, 58, 116, 60, 136, 42, 156, 21, 158, 15, 173, 24, 190, 36, 193, 36, 218, 52, 252, 107, 268, 161, 268, 249, 253 ), PoolVector2Array( 512, 263, 486, 294, 482, 316, 492, 339, 520, 350, 552, 341, 563, 322, 563, 301, 536, 262 ), PoolVector2Array( 535, 65, 522, 97, 522, 121, 556, 125, 566, 99, 548, 65 ), PoolVector2Array( 661, 158, 698, 177, 749, 187, 771, 171, 799, 181, 830, 180, 848, 163, 854, 169, 834, 195, 811, 212, 803, 239, 815, 272, 858, 282, 881, 230, 915, 202, 927, 153, 962, 105, 930, 43, 893, 61, 883, 90, 862, 52, 825, 59, 809, 83, 795, 81, 782, 55, 757, 45, 731, 63, 721, 97, 693, 75, 675, 81, 656, 118 ) ]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="PauseScene" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 16 )

[node name="PausedColoredRect" type="ColorRect" parent="PauseScene"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -548.0
margin_top = -328.0
margin_right = 548.0
margin_bottom = 328.0
color = Color( 0.0509804, 0.168627, 0.270588, 0.709804 )

[node name="PausedLabel" type="Label" parent="PauseScene"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -252.0
margin_top = -56.5
margin_right = 252.0
margin_bottom = 56.5
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Game Paused
Press <esc> to resume"
align = 1

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 5 )

[node name="ClickAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -43, -31 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 7 )
animation = "click"
frame = 1

[node name="DrawSelectNode2D" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="Fire" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( 521, 309 )

[node name="Villager" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 450, 337 )

[node name="Villager2" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 599, 312 )
initially_flipped = true

[node name="HouseSpawn1" type="Node2D" parent="YSort"]
position = Vector2( 303, 392 )

[node name="HouseSpawn2" type="Node2D" parent="YSort"]
position = Vector2( 724, 399 )

[node name="HouseSpawn3" type="Node2D" parent="YSort"]
position = Vector2( 387, 480 )

[node name="HouseSpawn4" type="Node2D" parent="YSort"]
position = Vector2( 693, 495 )

[node name="VillagerSpawn" type="Node2D" parent="."]
position = Vector2( 1053, 336 )

[node name="PondArea" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PondArea"]
polygon = PoolVector2Array( 366, 84, 337, 122, 337, 192, 308, 247, 255, 287, 182, 300, 97, 304, 43, 291, 16, 267, -7, 221, 15, 128, 61, 25, 152, 15, 218, -4, 316, -1, 359, 7, 377, 63 )

[node name="WoodArea" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WoodArea"]
polygon = PoolVector2Array( 639, 65, 624, 148, 650, 202, 715, 218, 766, 225, 775, 248, 776, 296, 865, 314, 890, 279, 910, 248, 950, 237, 983, 139, 983, 74, 982, 33, 934, 19, 834, 25, 712, 23 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="WoodArea"]
position = Vector2( 3, 0 )
polygon = PoolVector2Array( 502, 43, 479, 109, 521, 147, 584, 138, 582, 59, 547, 19 )

[node name="VillagerArrive" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EnemyArrive" type="Timer" parent="."]
wait_time = 0.35
autostart = true

[node name="ShortenEnemySpawn" type="Timer" parent="."]
wait_time = 11.0
autostart = true

[node name="EnemySpawn1" type="Node2D" parent="."]
position = Vector2( 521, 639 )

[node name="EnemySpawn2" type="Node2D" parent="."]
position = Vector2( -96, 384 )

[node name="EnemySpawn3" type="Node2D" parent="."]
position = Vector2( 1077, 531 )

[node name="EnemySpawn4" type="Node2D" parent="."]
position = Vector2( 281, 644 )

[node name="HoursLived" type="Label" parent="."]
margin_left = 821.0
margin_top = 8.0
margin_right = 1032.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
custom_fonts/font = SubResource( 5 )
text = "Hours lived   0"

[node name="HoursLivedTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="."]
navpoly = SubResource( 6 )

[node name="FireAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -80.0
pitch_scale = 1.36
autoplay = true

[node name="ChoppingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -80.0
autoplay = true

[node name="WaterAudioSource" type="Node2D" parent="."]
position = Vector2( 167, 150 )

[node name="WaterAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -80.0
autoplay = true

[node name="AudioTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SelectAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -20.0

[connection signal="build_house" from="HUD" to="." method="_on_HUD_build_house"]
[connection signal="food_death" from="HUD" to="." method="_on_HUD_food_death"]
[connection signal="stoke_fire" from="HUD" to="." method="_on_HUD_stoke_fire"]
[connection signal="freeze_death" from="YSort/Fire" to="." method="_on_Fire_freeze_death"]
[connection signal="body_entered" from="PondArea" to="." method="_on_PondArea_body_entered"]
[connection signal="body_exited" from="PondArea" to="." method="_on_PondArea_body_exited"]
[connection signal="body_entered" from="WoodArea" to="." method="_on_WoodArea_body_entered"]
[connection signal="body_exited" from="WoodArea" to="." method="_on_WoodArea_body_exited"]
[connection signal="timeout" from="VillagerArrive" to="." method="_on_VillagerArrive_timeout"]
[connection signal="timeout" from="EnemyArrive" to="." method="_on_EnemyArrive_timeout"]
[connection signal="timeout" from="ShortenEnemySpawn" to="." method="_on_ShortenEnemySpawn_timeout"]
[connection signal="timeout" from="HoursLivedTimer" to="." method="_on_HoursLivedTimer_timeout"]
[connection signal="timeout" from="AudioTimer" to="." method="_on_AudioTimer_timeout"]
